frontend/src/pages/Register/Register.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

.App {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  padding: 1rem 0.5rem;
}

.sect {
  width: 100%;
  min-height: 400px;
  min-width: 300px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  padding: 1rem;
  position: absolute;
  padding: 0.5rem 15rem;
}

.form {
  display: flex;
  flex-direction: column;
  justify-content: space-evenly;
  align-items: center;
  flex-grow: 1;
  padding-bottom: 1rem;
}

/*
input[type='text'],
input[type='password'],
button,
textarea {
  font-family: 'Nunito', sans-serif;
  font-size: 22px;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
}
*/

.input,
.button {
  font-family: 'Nunito', sans-serif;
  font-size: 22px;
  padding: 0.5rem 1rem;
  border-radius: 0.5rem;
  background-color: whitesmoke;
  width: 100%;
}

.textLabel,
.registerTitle {
  margin-top: 1rem;
  color: #000;
  font-family: 'open-700';
  padding-bottom: 0.5rem;
}

.button {
  padding: 0.5rem;
  margin: 0.8rem 5rem;
  background-color: #1e4d73;
  color: white;
  width: 30%;
}

.instructions {
  font-size: 0.75rem;
  border-radius: 0.5rem;
  background: #000;
  color: #fff;
  padding: 0.25rem;
  position: relative;
  bottom: -10px;
}

.instructions > svg {
  margin-right: 0.25rem;
}

.offscreen {
  position: absolute;
  left: -9999px;
}

.hide {
  display: none;
}

.valid {
  color: limegreen;
  margin-left: 0.25rem;
}

.invalid {
  color: red;
  margin-left: 0.25rem;
}

.errmsg {
  background-color: lightpink;
  color: firebrick;
  font-weight: bold;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
}

.line {
  display: inline-block;
}

.registerTitle {
  text-align: center;
}

